# planning-to-calibrate

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json  planningToCalibrate.h
matlab/: README.md
matlab/IncrementalSLAM/: AdjMatrix.m  IncrementalOptimization.m  LoadAndOptimize.m  Optimize.m  config.m
matlab/PlanningToCalibrate/: SLAMGUI.fig  SLAMGUI.m  data_associate.m  generateValues.m  generate_factor_graph.m  get_err.m  globals.m  initialize_constants.m  initialize_landmarks.m  initialize_poses.m  optimize_poses.m  optimize_poses_withoutGUI.m  planningInBeliefSpace.m  planningInBeliefSpace_withoutGUI.m  plotMap.m  predictUncertainty.m  randomWalk.m  randomWalk_withoutGUI.m  runExperiments.m  simulate_controls.m
src/: BearingRangeTransformFactor.h  BetweenLandmarkTransformFactor.h  BetweenTransformFactor.h  planningToCalibrate.cpp
tests/: CMakeLists.txt  testBearingRangeTransformFactor.cpp  testBetweenLandmarkTransformFactor.cpp  testBetweenTransformFactor.cpp
